kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea
  labels:
    name: gitea
spec:
  ports:
    - name: gitea
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    name: gitea
  type: NodePort
